[gd_scene load_steps=9 format=3 uid="uid://h4r6gvdf4iee"]

[ext_resource type="Texture2D" uid="uid://hwljtonh2uph" path="res://world/tiles/Workbench.png" id="1_8ba4o"]
[ext_resource type="Script" path="res://world/tiles/workbench.gd" id="1_fosi6"]
[ext_resource type="Texture2D" uid="uid://ijyvsr8l1ypa" path="res://world/tiles/tile_grass.png" id="2_oa31e"]
[ext_resource type="PackedScene" uid="uid://bnbe18xxkv8ty" path="res://ui, gui and hud/player_inventory.tscn" id="4_n5i7h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4tbvb"]
size = Vector2(64, 32)

[sub_resource type="ImageTexture" id="ImageTexture_20mdf"]

[sub_resource type="ImageTexture" id="ImageTexture_6hrrs"]

[sub_resource type="Theme" id="Theme_gv67m"]
Window/icons/close = SubResource("ImageTexture_20mdf")
Window/icons/close_pressed = SubResource("ImageTexture_6hrrs")

[node name="Workbench" type="StaticBody2D"]
texture_filter = 1
position = Vector2(0, -16)
script = ExtResource("1_fosi6")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(0, 16)
texture = ExtResource("2_oa31e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 32)
shape = SubResource("RectangleShape2D_4tbvb")

[node name="Sprite2D" type="TextureButton" parent="."]
offset_left = -32.0
offset_top = -48.0
offset_right = 32.0
offset_bottom = 48.0
texture_normal = ExtResource("1_8ba4o")
texture_focused = ExtResource("1_8ba4o")

[node name="WorkbenchPopup" type="Window" parent="."]
initial_position = 2
size = Vector2i(952, 448)
visible = false
unresizable = true
borderless = true
always_on_top = true
theme = SubResource("Theme_gv67m")

[node name="Control" type="Control" parent="WorkbenchPopup"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="WorkbenchPopup/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.14902, 0.180392, 1)

[node name="MarginContainer" type="MarginContainer" parent="WorkbenchPopup/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="WorkbenchPopup/Control/MarginContainer"]
layout_mode = 2

[node name="PlayerInventory" parent="WorkbenchPopup/Control/MarginContainer/HBoxContainer" instance=ExtResource("4_n5i7h")]
layout_mode = 2

[node name="Button" type="Button" parent="WorkbenchPopup/Control/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Close"

[connection signal="pressed" from="Sprite2D" to="." method="_on_sprite_2d_pressed"]
[connection signal="pressed" from="WorkbenchPopup/Control/MarginContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
